# api/src/controllers/user.controller.ts
@@ -1,4 +1,7 @@
 import { JsonController, Get, Post, Authorize, Body, Param} from 'kiwi-server';
+import * as http from 'http';
+
+import { LoginIn } from '../models/user.model';
 import { GenericModel } from '../models/generic.model';
 import { ResponseCode } from '../sdk/constants';
 import { Response } from '../sdk/response';
@@ -31,13 +34,13 @@ export class UserController {
 
   
   @Post('/login')
-  public async post(@Body() request: GenericModel){
-    let user = request.userProfile;
+  public async post(@Body() user: LoginIn, request: http.IncomingMessage, response: http.ServerResponse){
     let auth_user = await this.userService.logIn(user); 
     if (auth_user != null) {
       return new Response(ResponseCode.OK,'',auth_user);
     }else {
-      return new Response(ResponseCode.UNAUTHORIZED,'incorrect user or password',auth_user);
+      response.statusCode = 401;
+      return new Response(ResponseCode.UNAUTHORIZED, 'User or password incorrect');
     }
   }
 }
