# api/src/models/user.model.ts
@@ -1,7 +1,12 @@
 import { IsString } from "kiwi-server";
 
 export class UserIn{
-    @IsString() name: string;
-    @IsString() email: string;
-    @IsString() picture: string;
-  }
+  @IsString() name: string;
+  @IsString() email: string;
+  @IsString() picture: string;
+}
+
+export class LoginIn{
+  @IsString() username: string;
+  @IsString() password: string;
+}
